# RIGHT-Infer

./: .gitignore  CMakeLists.txt  README.md
config/: feature_detector.yaml  kinect.yaml  realsense.yaml
inc/: azurekinect.hpp  camera.hpp  myinfer.hpp  mythread.hpp  params.hpp  pclprocess.hpp  process_all_in_one.hpp  queue.hpp  realsense.hpp  tcp_socket.hpp  thread.hpp  uart.hpp  utils_all_in_one.hpp
inc/featdetector/: super_point.h  utils.h
inc/plnet/: plnet.h
inc/sensor/: azurekinect.hpp  azurekinect_infer.hpp  camera_wrapper.hpp  camerabase.hpp  realsense.hpp  realsense_infer.hpp
inc/yolo/: myinfer.hpp
models/: plnet_s1.engine  superpoint_v1_sim_int32.engine
runs/detect/train/: args.yaml
scripts/: run.sh
src/: azurekinect.cpp  camera.cpp  capture.cpp  k4a_debug.cpp  k4a_fine.cpp  k4a_process.cpp  k4a_rgb_cap.cpp  main.cpp  myinfer.cpp  mythread.cpp  params.cpp  pclprocess.cpp  process_all_in_one.cpp  queue.cpp  realsense.cpp  rs_coarse.cpp  rs_debug.cpp  rs_ir_cap.cpp  rs_process.cpp  rs_stereo.cpp  uart.cpp  utils_all_in_one.cpp  viewer.cpp
src/cuda/: CMakeLists.txt
src/featdetector/: myinfer.cpp  plnet.cpp  super_point.cpp  utils.cpp
src/plnet/: plnet.cpp
src/sensor/: azurekinect.cpp  azurekinect_infer.cpp  camera_wrapper.cpp  realsense.cpp  realsense_infer.cpp
src/tools/: CMakeLists.txt  k4a_rgb_cap.cpp  rs_ir_cap.cpp
src/yolo/: myinfer.cpp
workspace/pcl/: output.ply  output_opt.ply  output_seg.ply
workspace/pcl/basket_cloud/: basket1.ply  basket2.ply
yolov8/: export.py  gray2rgb.py  infer.py  raw_processing.py  train.py  transform.py
